--- a/app/src/main/res/layout/admin_dashboard.xml
+++ b/app/src/main/res/layout/admin_dashboard.xml
@@ -117,8 +117,8 @@
 
             <TextView
                 android:id="@+id/schedule_item"
-                android:layout_width="372dp"
-                android:layout_height="158dp"
+                android:layout_width="334dp"
+                android:layout_height="157dp"
                 android:layout_marginHorizontal="8dp"
                 android:background="@drawable/item"
                 app:layout_constraintBottom_toBottomOf="@+id/sched_box"
@@ -155,15 +155,15 @@
 
             <TextView
                 android:id="@+id/announcments_item"
-                android:layout_width="377dp"
-                android:layout_height="159dp"
+                android:layout_width="339dp"
+                android:layout_height="155dp"
                 android:layout_marginHorizontal="8dp"
                 android:background="@drawable/item"
                 app:layout_constraintBottom_toBottomOf="@+id/annoucement_box"
                 app:layout_constraintEnd_toEndOf="@+id/annoucement_box"
                 app:layout_constraintStart_toStartOf="@+id/annoucement_box"
                 app:layout_constraintTop_toBottomOf="@id/school_announcements"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintVertical_bias="0.0"  />
 
             <View
                 android:id="@+id/billing_box"
@@ -187,52 +187,85 @@
                 android:textColor="@color/white"
                 android:textSize="30sp"
                 app:layout_constraintStart_toStartOf="@+id/billing_box"
-                app:layout_constraintTop_toTopOf="@+id/billing_box" />
+                app:layout_constraintTop_toTopOf="@+id/billing_box"/>
 
             <TextView
                 android:id="@+id/billing_item"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="339dp"
+                android:layout_height="63dp"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/item"
                 app:layout_constraintBottom_toBottomOf="@+id/billing_box"
                 app:layout_constraintEnd_toEndOf="@+id/billing_box"
+                app:layout_constraintHorizontal_bias="0.49"
                 app:layout_constraintStart_toStartOf="@+id/billing_box"
-                app:layout_constraintTop_toBottomOf="@id/billing_balance" />
+                app:layout_constraintTop_toBottomOf="@id/billing_balance"
+                app:layout_constraintVertical_bias="0.78" />
+
+            <Button
+                android:id="@+id/del_A"
+                android:layout_width="56dp"
+                android:layout_height="45dp"
+                android:backgroundTint="#B42828"
+                android:text="-"
+                android:textSize="55px"
+                app:layout_constraintBottom_toBottomOf="@+id/view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.935"
+                app:layout_constraintStart_toStartOf="@+id/view"
+                app:layout_constraintTop_toTopOf="@+id/view"
+                app:layout_constraintVertical_bias="0.79" />
+
+            <Button
+                android:id="@+id/add_A"
+                android:layout_width="56dp"
+                android:layout_height="45dp"
+                android:backgroundTint="#359535"
+                android:text="+"
+                android:textSize="55px"
+                app:layout_constraintBottom_toBottomOf="@+id/view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.719"
+                app:layout_constraintStart_toStartOf="@+id/view"
+                app:layout_constraintTop_toTopOf="@+id/view"
+                app:layout_constraintVertical_bias="0.79" />
 
             <Button
                 android:id="@+id/add_S"
                 android:layout_width="56dp"
                 android:layout_height="45dp"
-                android:text="+"
                 android:backgroundTint="#359535"
+                android:text="+"
+                android:textSize="55px"
                 app:layout_constraintBottom_toBottomOf="@+id/view"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.77"
+                app:layout_constraintHorizontal_bias="0.703"
                 app:layout_constraintStart_toStartOf="@+id/view"
                 app:layout_constraintTop_toTopOf="@+id/view"
-                app:layout_constraintVertical_bias="0.449" />
+                app:layout_constraintVertical_bias="0.478" />
 
             <Button
                 android:id="@+id/del_S"
                 android:layout_width="56dp"
                 android:layout_height="45dp"
-                android:text="-"
                 android:backgroundTint="#B42828"
+                android:text="-"
+                android:textSize="55px"
                 app:layout_constraintBottom_toBottomOf="@+id/view"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.924"
+                app:layout_constraintHorizontal_bias="0.921"
                 app:layout_constraintStart_toStartOf="@+id/view"
                 app:layout_constraintTop_toTopOf="@+id/view"
-                app:layout_constraintVertical_bias="0.449" />
+                app:layout_constraintVertical_bias="0.478" />
 
             <Button
                 android:id="@+id/del_B"
                 android:layout_width="56dp"
                 android:layout_height="45dp"
-                android:text="-"
                 android:backgroundTint="#B42828"
+                android:text="-"
+                android:textSize="55px"
                 app:layout_constraintBottom_toBottomOf="@+id/view"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.935"
@@ -244,40 +277,15 @@
                 android:id="@+id/add_B"
                 android:layout_width="56dp"
                 android:layout_height="45dp"
-                android:text="+"
                 android:backgroundTint="#359535"
+                android:text="+"
+                android:textSize="55px"
                 app:layout_constraintBottom_toBottomOf="@+id/view"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.784"
+                app:layout_constraintHorizontal_bias="0.719"
                 app:layout_constraintStart_toStartOf="@+id/view"
                 app:layout_constraintTop_toTopOf="@+id/view"
                 app:layout_constraintVertical_bias="0.98" />
-
-            <Button
-                android:id="@+id/del_A"
-                android:layout_width="56dp"
-                android:layout_height="45dp"
-                android:text="-"
-                android:backgroundTint="#B42828"
-                app:layout_constraintBottom_toBottomOf="@+id/view"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.935"
-                app:layout_constraintStart_toStartOf="@+id/view"
-                app:layout_constraintTop_toTopOf="@+id/view"
-                app:layout_constraintVertical_bias="0.735" />
-
-            <Button
-                android:id="@+id/add_A"
-                android:layout_width="56dp"
-                android:layout_height="45dp"
-                android:text="+"
-                android:backgroundTint="#359535"
-                app:layout_constraintBottom_toBottomOf="@+id/view"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.784"
-                app:layout_constraintStart_toStartOf="@+id/view"
-                app:layout_constraintTop_toTopOf="@+id/view"
-                app:layout_constraintVertical_bias="0.735" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         <!-- === END OF INTEGRATED CODE === -->
