--- a/app/src/main/res/layout/user_dashboard.xml
+++ b/app/src/main/res/layout/user_dashboard.xml
@@ -117,8 +117,8 @@
 
             <TextView
                 android:id="@+id/schedule_item"
-                android:layout_width="372dp"
-                android:layout_height="158dp"
+                android:layout_width="334dp"
+                android:layout_height="157dp"
                 android:layout_marginHorizontal="8dp"
                 android:background="@drawable/item"
                 app:layout_constraintBottom_toBottomOf="@+id/sched_box"
@@ -155,8 +155,8 @@
 
             <TextView
                 android:id="@+id/announcments_item"
-                android:layout_width="377dp"
-                android:layout_height="159dp"
+                android:layout_width="339dp"
+                android:layout_height="155dp"
                 android:layout_marginHorizontal="8dp"
                 android:background="@drawable/item"
                 app:layout_constraintBottom_toBottomOf="@+id/annoucement_box"
@@ -191,15 +191,17 @@
 
             <TextView
                 android:id="@+id/billing_item"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="339dp"
+                android:layout_height="63dp"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/item"
                 app:layout_constraintBottom_toBottomOf="@+id/billing_box"
                 app:layout_constraintEnd_toEndOf="@+id/billing_box"
+                app:layout_constraintHorizontal_bias="0.535"
                 app:layout_constraintStart_toStartOf="@+id/billing_box"
-                app:layout_constraintTop_toBottomOf="@id/billing_balance" />
+                app:layout_constraintTop_toBottomOf="@id/billing_balance"
+                app:layout_constraintVertical_bias="0.682" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         <!-- === END OF INTEGRATED CODE === -->
