--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Welcome, User"
-        android:textColor="@android:color/white"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"/>
 </LinearLayout>
